--- a/package.json
+++ b/package.json
@@ -35,5 +35,11 @@
     "webpack": "^4.20.0",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.9"
+  },
+  "dependencies": {
+    "react-redux": "^5.0.7",
+    "react-spinners": "^0.4.5",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
